# PARCuda

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: cudaTools.cuh  matrix.h
lib/src/: cudaTools.cu  matrix.cpp
src/01/: 01.cu  01.cuh  CMakeLists.txt  main.cpp
src/02/: CMakeLists.txt  cuda.cu  cuda.cuh  main.cpp  serial.cpp  serial.h
src/03/: CMakeLists.txt  cuda.cu  cuda.cuh  main.cpp  serial.cpp  serial.h
src/04/: 04.cu  04.cuh  CMakeLists.txt  main.cpp
src/05/: CMakeLists.txt  cuda.cu  cuda.cuh  main.cpp
